# leetcode

./: .gitignore  CMakeLists.txt  flake.nix  new.sh  readme.md  run.sh  sources.txt
advent/: 1-secret.cpp  2-products.cpp  3-power.cpp  4-printer.cpp  5-cafe.cpp  6-math.cpp  7-teleport.cpp  8-junctions.cpp  utils.hpp
src/: 1-twosum.cpp  13-fromroman.cpp  20-parentheses.cpp  21-merge.cpp  21-parentheses.cpp  237-delnode.cpp  74-mat2d.cpp
src/util/: prelude.hpp
